# hands-on-train-and-deploy-ml

./: .gitignore  .set_env_variables_template.sh  LICENSE  Makefile  README.md  install-poetry.py  pyproject.toml  set_environment_variables.sh  set_environment_variables_template.sh
.github/workflows/: deploy_api.yml
lectures/: 01_model_training.md  02_model_deployment.md  03_continuous_deployment_with_webhooks.md
notebooks/: model.ipynb
src/: baseline_model.py  config.py  data.py  deploy.py  hyperparams.py  logger.py  model_registry_api.py  paths.py  predict.py  preprocessing.py  test_endpoint.py  train.py
tests/: test.py
